added img folder

--- a/galerija.html
+++ b/galerija.html
@@ -19,14 +19,14 @@
         </nav>
 
         <div class="slike">
-            <img src="buket1.jpg" alt="">
-            <img src="buket2.jpg" alt="">
-            <img src="buket4.jpg" alt="">
-            <img src="buket5.jpg" alt="">
-            <img src="aranzman1.jpg" alt="">
-            <img src="aranzman2.jpg" alt="">
-            <img src="aranzman3.jpg" alt="">
-            <img src="aranzman4.jpg" alt="">
+            <img src="slike/buket1.jpg" alt="">
+            <img src="slike/buket2.jpg" alt="">
+            <img src="slike/buket4.jpg" alt="">
+            <img src="slike/buket5.jpg" alt="">
+            <img src="slike/aranzman1.jpg" alt="">
+            <img src="slike/aranzman2.jpg" alt="">
+            <img src="slike/aranzman3.jpg" alt="">
+            <img src="slike/aranzman4.jpg" alt="">
         </div>
         
         <footer>
@@ -37,11 +37,11 @@
             </div>
             <div id="kontakt-info">
                 <span class="telefon">
-                    <img src="phone.png" alt="">
+                    <img src="slike/phone.png" alt="">
                     <p>+381674458955</p>
                 </span>
                 <span class="mejl">
-                    <img src="email.png" alt="">
+                    <img src="slike/email.png" alt="">
                     <p>email@gmail.com</p>
                 </span>
             </div>
