--- a/kontakt.html
+++ b/kontakt.html
@@ -29,11 +29,11 @@
             </div>
             <div id="kontakt-info">
                 <span class="telefon">
-                    <img src="phone.png" alt="">
+                    <img src="slike/phone.png" alt="">
                     <p>+381674458955</p>
                 </span>
                 <span class="mejl">
-                    <img src="email.png" alt="">
+                    <img src="slike/email.png" alt="">
                     <p>email@gmail.com</p>
                 </span>
             </div>
