--- a/naslovna.html
+++ b/naslovna.html
@@ -34,15 +34,15 @@
         <div class="info">
             <div class="ponude">
                 <div id="biljke">
-                    <img class="biljke-img" src="bilje.jpg" alt="">
+                    <img class="biljke-img" src="slike/bilje.jpg" alt="">
                     <a href="shop.html"><p class="hover-biljke">Biljke</p></a>
                 </div>
                 <div id="vencanja">
-                    <img src="vencanje.jpg" alt="">
+                    <img src="slike/vencanje.jpg" alt="">
                     <a href="shop.html"><p class="hover-vencanja">Vencanja</p></a>
                 </div>
                 <div id="godisnjice">
-                    <img src="flowerbox.jpg" alt="">
+                    <img src="slike/flowerbox.jpg" alt="">
                     <a href="shop.html"><p class="hover-godisnjice">Godisnjice</p></a>
                 </div>
             </div>
@@ -55,16 +55,16 @@
                         voluptates maxime nam earum ipsum.
                     </p>
                 </div>
-                <img src="vencanje.jpg" alt="">
+                <img src="slike/vencanje.jpg" alt="">
             </div>
     
             <div class="nas-tim">
                 <h1>Upoznajte nas tim</h1>
                 <div class="clanovi">
-                    <img src="person1.jpg" alt="">
-                    <img src="person2.jpg" alt="">
-                    <img src="person3.jpg" alt="">
-                    <img src="person4.jpg" alt="">
+                    <img src="slike/person1.jpg" alt="">
+                    <img src="slike/person2.jpg" alt="">
+                    <img src="slike/person3.jpg" alt="">
+                    <img src="slike/person4.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -77,11 +77,11 @@
             </div>
             <div id="kontakt-info">
                 <span class="telefon">
-                    <img src="phone.png" alt="">
+                    <img src="slike/phone.png" alt="">
                     <p>+381674458955</p>
                 </span>
                 <span class="mejl">
-                    <img src="email.png" alt="">
+                    <img src="slike/email.png" alt="">
                     <p>email@gmail.com</p>
                 </span>
             </div>
