--- a/proizvod.html
+++ b/proizvod.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="proizvod-strana">
-        <img src="buket1.jpg" alt="">
+        <img src="slike/buket1.jpg" alt="">
         <div class="proizvod-tekst">
             <h1>LOREM</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> At temporibus nisi mollitia veritatis vel
@@ -70,9 +70,6 @@
                     <span>Lorem ipsum</span>
                 </li>
             </ul>
-
-            <!-- <span>1350 RSD</span>
-            <button class="korpa">Dodaj u korpu</button> -->
         </div>
     </div>
     
@@ -84,11 +81,11 @@
         </div>
         <div id="kontakt-info">
             <span class="telefon">
-                <img src="phone.png" alt="">
+                <img src="slike/phone.png" alt="">
                 <p>+381674458955</p>
             </span>
             <span class="mejl">
-                <img src="email.png" alt="">
+                <img src="slike/email.png" alt="">
                 <p>email@gmail.com</p>
             </span>
         </div>
