--- a/shop.html
+++ b/shop.html
@@ -30,42 +30,42 @@
         </div>
         <div class="proizvodi">
             <div class="buket">
-                <img src="buket1.jpg" alt="">
+                <img src="slike/buket1.jpg" alt="">
                 <p>
                     <a href="proizvod.html">Lorem</a>
                 </p>
                 <p>1350 RSD</p>
             </div>
             <div class="buket">
-                <img src="buket2.jpg" alt="">
+                <img src="slike/buket2.jpg" alt="">
                 <p>
                     <a href="">Lorem</a>
                 </p>
                 <p>1350 RSD</p>
             </div>
             <div class="buket">
-                <img src="buket3.jpg" alt="">
+                <img src="slike/buket3.jpg" alt="">
                 <p>
                     <a href="">Lorem</a>
                 </p>
                 <p>1350 RSD</p>
             </div>
             <div class="buket">
-                <img src="buket4.jpg" alt="">
+                <img src="slike/buket4.jpg" alt="">
                 <p>
                     <a href="">Lorem</a>
                 </p>
                 <p>1350 RSD</p>
             </div>
             <div class="buket">
-                <img src="buket5.jpg" alt="">
+                <img src="slike/buket5.jpg" alt="">
                 <p>
                     <a href="">Lorem</a>
                 </p>
                 <p>1350 RSD</p>
             </div>
             <div class="buket">
-                <img src="buket6.jpg" alt="">
+                <img src="slike/buket6.jpg" alt="">
                 <p>
                     <a href="">Lorem</a>
                 </p>
@@ -82,11 +82,11 @@
         </div>
         <div id="kontakt-info">
             <span class="telefon">
-                <img src="phone.png" alt="">
+                <img src="slike/phone.png" alt="">
                 <p>+381674458955</p>
             </span>
             <span class="mejl">
-                <img src="email.png" alt="">
+                <img src="slike/email.png" alt="">
                 <p>email@gmail.com</p>
             </span>
         </div>
