--- a/proizvod.html
+++ b/proizvod.html
@@ -13,8 +13,7 @@
     <nav>
         <ul>
             <li><a href="naslovna.html">Naslovna</a></li>
-            <li><a href="onama.html">O nama</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li><a href="biljke.html">Shop</a></li>
             <li><a href="galerija.html">Galerija</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
@@ -95,6 +94,8 @@
             <p>Nedelja: Neradna</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
