--- a/naslovna.html
+++ b/naslovna.html
@@ -4,13 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Naslovna</title>
+    <meta name="viewport" content="width=devide-width, initial-scale=1.0"/>
+    <meta name="keywords"
+        content="cvece, cvecara, cvecara novi sad, vencanja, godisnjice, proslave, buketi, bidermajer, cvetni aranzmani"/>
+    <meta name="title" content="Cvecara"/>
+    <meta name="copyright" content="Aleksandra Novakovic"/>
+    <meta name="description"
+        content="U nasoj cvecari mozete naci cvetne aranzmane za vencanja, godisnjice, rodjendane ili proslave bilo kog tipa."/>
+    <meta property="og:url"
+        content="https://htmlpreview.github.io/?https://github.com/alekssandranov/IJA1-projekat/blob/master/naslovna.html"/>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Cvecara Nitrofila"/>
+    <meta property="og:description"
+        content="U nasoj cvecari mozete naci cvetne aranzmane za vencanja, godisnjice, rodjendane ili proslave bilo kog tipa."/>
+    <meta property="og:image" content="https://github.com/alekssandranov/IJA1-projekat/blob/master/slike/aranzman5.jpg"/>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="favicon/favicon.ico"/>
+    <title>Cvecara Nitrofila</title>
 </head>
 
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0"
+        nonce="oqFDSYJm"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0"
+        nonce="uygrRJkG"></script>
+
     <div class="main-stranica">
+        <button id="menubtn">menu</button>
         <nav>
             <ul class="navbar">
                 <li><a href="#">Naslovna</a></li>
@@ -24,24 +46,24 @@
 
         <div class="naslovna">
             <div class="tekst_slike">
-                <p class="naslov">Lorem ipsum</p>
+                <p class="naslov">Cvecara Nitrofila</p>
                 <p class="podnaslov">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Id, aliquid?</p>
-                <button class="dugme"><a href="biljke.html">Vise</a></button>
+                <a class="dugme" href="biljke.html">Vise</a>
             </div>
         </div>
 
         <div class="info">
             <div class="ponude">
                 <div onclick="biljke(1)" id="biljke">
-                    <img class="biljke-img" src="slike/bilje.jpg" alt="">
+                    <img class="biljke-img" src="slike/bilje.jpg" alt="biljke">
                     <p class="hover-biljke">Biljke</p>
                 </div>
                 <div onclick="biljke(2)" id="vencanja">
-                    <img src="slike/vencanje.jpg" alt="">
+                    <img src="slike/vencanje.jpg" alt="vencanja">
                     <p class="hover-vencanja">Vencanja</p>
                 </div>
                 <div onclick="biljke(3)" id="godisnjice">
-                    <img src="slike/flowerbox.jpg" alt="">
+                    <img src="slike/flowerbox.jpg" alt="godisnjice">
                     <p class="hover-godisnjice">Godisnjice</p>
                 </div>
             </div>
@@ -55,7 +77,7 @@
                         voluptates maxime nam earum ipsum.
                     </p>
                 </div>
-                <img src="slike/vencanje.jpg" alt="">
+                <img src="slike/vencanje.jpg" alt="vencanja">
             </div>
 
             <div class="nas-tim">
@@ -69,6 +91,16 @@
             </div>
         </div>
 
+        <div id="social-media">
+            <div class="fb-share-button"
+                data-href="https://htmlpreview.github.io/?https://github.com/alekssandranov/IJA1-projekat/blob/master/naslovna.html"
+                data-layout="" data-size=""><a target="_blank"
+                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhtmlpreview.github.io%2F%3Fhttps%253A%252F%252Fgithub.com%252Falekssandranov%252FIJA1-projekat%252Fblob%252Fmaster%252Fnaslovna.html&amp;src=sdkpreparse"
+                    class="fb-xfbml-parse-ignore">Share</a></div>
+            <div class="fb-like"
+                data-href="https://htmlpreview.github.io/?https://github.com/alekssandranov/IJA1-projekat/blob/master/naslovna.html"
+                data-width="" data-layout="" data-action="" data-size="" data-share="false"></div>
+        </div>
         <footer>
             <div id="adresa">
                 <h2>Lorem ipsum</h2>
@@ -76,14 +108,14 @@
                 <p>Novi Sad</p>
             </div>
             <div id="kontakt-info">
-                <span class="telefon">
+                <div class="telefon">
                     <img src="slike/phone.png" alt="">
                     <p>+381674458955</p>
-                </span>
-                <span class="mejl">
+                </div>
+                <div class="mejl">
                     <img src="slike/email.png" alt="">
                     <p>email@gmail.com</p>
-                </span>
+                </div>
             </div>
             <div id="radno-vreme">
                 <p>Radni dani: 08-20h</p>
