--- a/naslovna.html
+++ b/naslovna.html
@@ -2,24 +2,34 @@
 <html lang="en">
 
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJ797Y1D6P"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JJ797Y1D6P');
+    </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=devide-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=devide-width, initial-scale=1.0" />
     <meta name="keywords"
-        content="cvece, cvecara, cvecara novi sad, vencanja, godisnjice, proslave, buketi, bidermajer, cvetni aranzmani"/>
-    <meta name="title" content="Cvecara"/>
-    <meta name="copyright" content="Aleksandra Novakovic"/>
+        content="cvece, cvecara, cvecara novi sad, vencanja, godisnjice, proslave, buketi, bidermajer, cvetni aranzmani" />
+    <meta name="title" content="Cvecara" />
+    <meta name="copyright" content="Aleksandra Novakovic" />
     <meta name="description"
-        content="U nasoj cvecari mozete naci cvetne aranzmane za vencanja, godisnjice, rodjendane ili proslave bilo kog tipa."/>
+        content="U nasoj cvecari mozete naci cvetne aranzmane za vencanja, godisnjice, rodjendane ili proslave bilo kog tipa." />
     <meta property="og:url"
-        content="https://htmlpreview.github.io/?https://github.com/alekssandranov/IJA1-projekat/blob/master/naslovna.html"/>
+        content="https://htmlpreview.github.io/?https://github.com/alekssandranov/IJA1-projekat/blob/master/naslovna.html" />
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Cvecara Nitrofila"/>
-    <meta property="og:description"
-        content="U nasoj cvecari mozete naci cvetne aranzmane za vencanja, godisnjice, rodjendane ili proslave bilo kog tipa."/>
-    <meta property="og:image" content="https://github.com/alekssandranov/IJA1-projekat/blob/master/slike/aranzman5.jpg"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="icon" href="favicon/favicon.ico"/>
+    <meta property="og:title" content="Cvecara Nitrofila" />
+    <meta property="og:description" content="Buketi i aranzmani za svaku priliku." />
+    <meta property="og:image" content="slike/aranzman5.jpg" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon/favicon.ico" />
     <title>Cvecara Nitrofila</title>
 </head>
 
