--- a/naslovna.html
+++ b/naslovna.html
@@ -136,7 +136,7 @@
     </div>
 
     <script src="script.js"></script>
-   <script>var BotStar={appId:"se03aef36-c437-4b42-b404-5b9f4eaa16a5",mode:"livechat"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.BotStarApi=e;!function(){var t=a.createElement("script");t.type="text/javascript",t.async=1,t.src="https://widget.botstar.com/static/js/widget.js";var e=a.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();}(window,document)</script>
+   <script>var BotStar={appId:"se03aef36-c437-4b42-b404-5b9f4eaa16a5",mode:"popup"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.BotStarApi=e;!function(){var t=a.createElement("script");t.type="text/javascript",t.async=1,t.src="https://widget.botstar.com/static/js/widget.js";var e=a.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();}(window,document)</script>
 </body>
 
 </html>
